
- #8515: manual, precise constraints on reexported types
  (Florian Angeletti, review by Gabriel Scherer)

### Bug fixes:

- #7156, #8594: make top level use custom printers if they are available
  (Andrew Litteken, report by Martin Jambon, review by Nicolás Ojeda Bär,
   Thomas Refis, Armaël Guéneau, Gabriel Scherer, David Allsopp)
- #3249: ocamlmklib should reject .cmxa files
  (Xavier Leroy)
- #7937, #2287: fix uncaught Unify exception when looking for type
  declaration
  (Florian Angeletti, review by Jacques Garrigue)

- #2296: Fix parsing of hexadecimal floats with underscores in the exponent.
  (Hugo Heuzard and Xavier Leroy, review by Gabriel Scherer)

- #8610, #8613: toplevel printing, consistent deduplicated name for types
  (Florian Angeletti, review by Thomas Refis and Gabriel Scherer,
   reported by Xavier Clerc)

- #8635, #8636: Fix a bad side-effect of the -allow-approx option of
  ocamldep. It used to turn some errors into successes
  (Jérémie Dimino)

- #8701, #8725: Variance of constrained parameters causes principality issues
  (Jacques Garrigue, report by Leo White, review by Gabriel Scherer)

- #8779, more cautious variance computation to avoid missing cmis
  (Florian Angeletti, report by Antonio Nuno Monteiro, review by Leo White)

- #8800: Fix soundness bug in extension constructor inclusion
  (Leo White, review by Jacques Garrigue)

- #8810: Env.lookup_module: don't allow creating loops
  (Thomas Refis, report by Leo White, review by Jacques Garrigue)

- #8848: Fix x86 stack probe CFI information in caml_c_call and
  caml_call_gc
  (Tom Kelly, review by Xavier Leroy)

- #8864, #8865: Fix native compilation of left shift by (word_size - 1)
  (Vincent Laviron, report by Murilo Giacometti Rocha, review by Xavier Leroy)

- #8862, #8871: subst: preserve scopes
  (Thomas Refis, report by Leo White)

OCaml 4.08 maintenance branch:
------------------------------

### Bug fixes:

- #7887: ensure frame table is 8-aligned on ARM64 and PPC64